--- a/concl.tex
+++ b/concl.tex
@@ -14,6 +14,8 @@ Fields to explore ....
 Lot more to say when paper will be finished.
 
 \chapter*{Acknowledgment}
-Big up to @caillou for awesome ML and engineering skills
+
+Big up to @caillou for ML, and Alkemics as a whole for engineering skills.
+Big up to MS BGD @Telecom for accepting me in 2017 promo
 
 \addcontentsline{toc}{chapter}{Acknowledgment}
